# musicxml

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: generate_docs.yml
assets/: MusicXML-Logo-Square.xcf  MusicXML-Logo.xcf
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
musicxml/: Cargo.toml
musicxml/assets/: docs.css
musicxml/examples/: convert_score_types.rs  read_convert_score1.rs  read_convert_score2.rs  read_convert_write.rs  read_musicxml_score.rs  read_mxl_score.rs  write_convert_score1.rs  write_convert_score2.rs  write_musicxml_score.rs  write_mxl_score.rs
musicxml/src/: lib.rs
musicxml/src/datatypes/: above_below.rs  accidental_value.rs  accordion_middle.rs  anyuri.rs  arrow_direction.rs  arrow_style.rs  backward_forward.rs  bar_style.rs  beam_level.rs  beam_value.rs  beater_value.rs  bend_shape.rs  breath_mark_value.rs  caesura_value.rs  cancel_location.rs  circular_arrow.rs  clef_sign.rs  color.rs  comma_separated_text.rs  css_font_size.rs  date.rs  decimal.rs  degree_symbol_value.rs  degree_type_value.rs  distance_type.rs  divisions.rs  effect_value.rs  enclosure_shape.rs  ending_number.rs  fan.rs  fermata_shape.rs  fifths.rs  font_family.rs  font_size.rs  font_style.rs  font_weight.rs  glass_value.rs  glyph_type.rs  group_barline_value.rs  group_symbol_value.rs  (+119 more)
musicxml/src/elements/: accent.rs  accidental.rs  accidental_mark.rs  accidental_text.rs  accord.rs  accordion_high.rs  accordion_low.rs  accordion_middle.rs  accordion_registration.rs  actual_notes.rs  alter.rs  appearance.rs  arpeggiate.rs  arrow.rs  arrow_direction.rs  arrow_style.rs  arrowhead.rs  articulations.rs  artificial.rs  assess.rs  attributes.rs  backup.rs  bar_style.rs  barline.rs  barre.rs  base_pitch.rs  bass.rs  bass_alter.rs  bass_separator.rs  bass_step.rs  beam.rs  beat_repeat.rs  beat_type.rs  beat_unit.rs  beat_unit_dot.rs  beat_unit_tied.rs  beater.rs  beats.rs  bend.rs  bend_alter.rs  (+403 more)
musicxml/src/parser/: mod.rs  xml_parser.rs  zip_parser.rs
musicxml/tests/: Grande Valse Brillante - Timewise.musicxml  Grande Valse Brillante.musicxml  Grande Valse Brillante.mxl
musicxml/tools/: parse_docs.py
musicxml_internal/: CHANGELOG.md  Cargo.toml
musicxml_internal/src/: lib.rs
musicxml_macros/: Cargo.toml
musicxml_macros/src/: lib.rs
