[package]
edition.workspace = true
name = "musicxml"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "MusicXML parsing, manipulation, and export library"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.docs.rs]
cargo-args = ["--workspace", "--no-deps", "--release"]
rustdoc-args = ["--extend-css", "musicxml/assets/docs.css"]

[dependencies]
regex = { version = "1.10", default-features = false, features = ["std", "perf"] }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
musicxml_internal.workspace = true
musicxml_macros.workspace = true

[lib]
crate-type = ["rlib"]
