[package]
edition.workspace = true
name = "musicxml"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "MusicXML parsing, manipulation, and export library"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "assets/docs.css"]

[dependencies]
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
regex = { version = "1.10", default-features = false, features = ["perf-cache", "perf-dfa", "perf-onepass", "perf-backtrack", "perf-inline"] }
musicxml_internal.workspace = true
musicxml_macros.workspace = true

[features]
default = ["std"]
std = ["regex/std", "regex/perf-literal"]

[lib]
crate-type = ["rlib"]
